classDiagram
    class HandoverCode {
        +BigInteger id
        +BigInteger match_id
        +SmallInteger seq
        +String|None lost_code
        +String|None finder_code
        +DateTime|None lost_code_expire
        +DateTime|None finder_code_expire
        +Boolean lost_code_verified
        +Boolean finder_code_verified
        +SmallInteger status
        +String|None gps_lost
        +String|None gps_finder
        +DateTime generated_at
    }

    class MatchRecord {
        +BigInteger id
        +BigInteger lost_id
        +BigInteger found_id
        +Numeric match_score
        +SmallInteger status
        +SmallInteger flow_type
        +Text|None claim_reason
        +String|None code
        +DateTime|None code_expire
        +DateTime created_at
        +DateTime|None completed_at
    }

    class HandoverService {
        -Session db
        +generate_code(match_id, operator_id) HandoverCode
        +verify(match_id, code, role, gps, operator_id) dict
    }

    class HandoverGenerateOut {
        +str role
        +str code
        +datetime expire_at
    }

    class HandoverVerifyRequest {
        +str code
        +str role
        +str|None gps
    }

    class HandoverVerifyOut {
        +bool both_verified
        +bool lost_code_verified
        +bool finder_code_verified
    }

    class LostItem {
        +BigInteger id
        +BigInteger publisher_id
        +SmallInteger status
    }

    class FoundItem {
        +BigInteger id
        +BigInteger finder_id
        +SmallInteger status
    }

    HandoverCode }o--|| MatchRecord : match_id FK
    MatchRecord }o--|| LostItem : lost_id FK
    MatchRecord }o--|| FoundItem : found_id FK
    HandoverService --> HandoverCode : reads/writes
    HandoverService --> MatchRecord : reads/writes
    HandoverService --> LostItem : reads
    HandoverService --> FoundItem : reads
    HandoverGenerateOut ..> HandoverCode : maps from
    HandoverVerifyOut ..> HandoverService : maps from verify result
